gateway-elb/resources/service-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-gw-lb
  namespace: gateways
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "30033"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /healthz
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 443
    protocol: TCP
    targetPort: 1443
    name: https
  - port: 80
    protocol: TCP
    targetPort: 1080
    name: http
  selector: {}
