gateway-elb/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gw
  namespace: gateways
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 1080
    hostname: "*.cluster-hybrid.ddnsfree.com"
    name: web-ls
    allowedRoutes:
      namespaces:
        from: All
  - protocol: TLS
    port: 1443
    hostname: "*.cluster-hybrid.ddnsfree.com"
    name: web-ls-tls
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          name: cluster-hybrid.ddnsfree.com-tls
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cluster-gw-lb
  namespace: gateways
subsets:
  - addresses:
      - ip: 10.0.1.100  
      - ip: 10.0.2.100  
    ports:
      - port: 1443
        protocol: TCP
        name: https
      - port: 1080
        protocol: TCP
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-gw-lb
  namespace: gateways
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "30033"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /healthz
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-07a6565748b79cb76,eipalloc-0bb6ac05dbb5f851d"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 443
    protocol: TCP
    targetPort: 1443
    name: https
  - port: 80
    protocol: TCP
    targetPort: 1080
    name: http
  selector: {}  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthz-responder
  namespace: gateways
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthz-responder
  template:
    metadata:
      labels:
        app: healthz-responder
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-listen=:80"
            - "-text=ok"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: healthz-svc
  namespace: gateways
spec:
  type: NodePort
  selector:
    app: healthz-responder
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30033
